--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 #theme: minima
-remote_theme: pages-themes/tactile@v0.2.0
+remote_theme: pages-themes/tactile
 plugins:
    - jekyll-remote-theme
 #  - jekyll-feed
