--- a/_config.yml
+++ b/_config.yml
@@ -20,15 +20,15 @@
 
 title: UVic Libraries IIIF Demo
 #email: tjychan@uvic.ca
-description: >- # this means to ignore newlines until "baseurl:"
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+description: # >- this means to ignore newlines until "baseurl:"
+baseurl: # the subpath of your site, e.g. /blog
+url: # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jekyllrb
 #github_username:  jekyll
 
 # Build settings
-#theme: minima
-remote_theme: pages-themes/tactile
+theme: jekyll-theme-tactile
+#remote_theme: pages-themes/tactile
 plugins:
    - jekyll-remote-theme
 #  - jekyll-feed
