Change the name of the Image Requests page to Image API. Add the image size example.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,5 +8,7 @@ pages:
     url: vault.html
   - title: Spotlight
     url: spotlight.html
-  - title: Image Requests
-    url: image-requests.html
+  - title: Image API
+    url: image-api.html
+  - title: Image URL Generator
+    url: generator.html
