Comment out the jekyll-remote-theme plugin from _config.yml (no longer need it anymore).

--- a/_config.yml
+++ b/_config.yml
@@ -29,8 +29,8 @@ url: # the base hostname & protocol for your site, e.g. http://example.com
 # Build settings
 theme: jekyll-theme-tactile
 #remote_theme: pages-themes/tactile
-plugins:
-   - jekyll-remote-theme
+#plugins:
+#   - jekyll-remote-theme
 #  - jekyll-feed
 
 # Exclude from processing.
